<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="today">Today</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite">Favourite</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="initial_settings">Initial Settings</string>
    <string name="location">Location</string>
    <string name="gps">Gps</string>
    <string name="map">Map</string>
    <string name="notification">Notification</string>
    <string name="ok">OK</string>
    <string name="_24_hourf_forcast">24 Hour Forcast</string>
    <string name="five_day_forcast">Five Day Forcast</string>
    <string name="more_informaion">More Informaion</string>
    <string name="can_t_calculate">can\'t Calculate</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="areyousure">Are You Sure</string>
    <string name="confirmation">confirmation</string>
    <string name="save">Save</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="temperature">Temperature</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="fragment_maps">Maps</string>
    <string name="fragment_splash">Splash</string>
    <string name="c">C°</string>
    <string name="k">K</string>
    <string name="f">F</string>
    <string name="hpa">Hpa</string>
    <string name="ms">m/s</string>
    <string name="mh">M/h</string>
    <string name="we_can_t_access_yur_location_please_allow_permission">We can\'t Access yur location please allow permission</string>
    <string name="allow">Allow</string>
    <string name="no_internet">No Internet</string>
    <string name="no_alarm_added_yet">No Alarm Added Yet.</string>
    <string name="plus">Plus</string>
    <string name="_0">0</string>
    <string name="date">Month/Day Hour:Min</string>
</resources>