<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weatherapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fav"
        android:name="com.example.weatherapp.ui.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_alerts"
        android:name="com.example.weatherapp.ui.alerts.AlertsFragment"
        android:label="@string/alerts"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.weatherapp.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.weatherapp.ui.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpToInclusive="false" />
    </fragment>
</navigation>